--- a/src/main/Main.module.css
+++ b/src/main/Main.module.css
@@ -2,7 +2,7 @@
     display: flex;
     align-items: center;
     height: 100vh;
-    background-color: #90ffa8;
+    background-color: #212529;
 }
 .preview{
     width: 300px;
