--- a/src/skills/Skillls.module.css
+++ b/src/skills/Skillls.module.css
@@ -15,6 +15,17 @@
     flex-wrap: wrap;
     justify-content: space-between;
 }
+@media screen and (max-width: 691px){
+    .skills{
+        justify-content: center;
+    }
+}
+
+@media screen and (min-width: 691px) and (max-width: 1029px){
+    .skills{
+        justify-content: space-evenly;
+    }
+}
 
 .title {
     background-color: #00fffa;
