--- a/src/footer/Footer.module.scss
+++ b/src/footer/Footer.module.scss
@@ -1,17 +1,17 @@
 @import "src/common/styles/sass/variables";
+@import "src/common/styles/sass/mixins";
+@import "src/common/styles/sass/variables";
 
 
 .footerBox{
-    background-color: $bgColor;
-    padding: 70px 0;
+    min-height: 120px;
+    padding: 0 0 20px 0;
     .footerContainer{
+        @include container();
         flex-direction: column;
         justify-content: flex-start;
         .header{
-            font-size: 16px;
-            color: #f5f5f5;
-            font-family: "Poppins",Helvetica,sans-serif;
-            font-weight: 600;
+            @include text($fontFamily,16px,1,$textDescriptionColor);
             font-style: normal;
             display: block;
             margin-block-start: 1.33em;
@@ -25,16 +25,7 @@
                 content: '';
                 width: 100%;
                 height: 2px;
-                background-color: $primaryColor;
-                bottom: -7px;
-            }
-            &::after{
-                display: block;
-                position: absolute;
-                content: '';
-                width: 70%;
-                height: 2px;
-                background-color: $fakeColor;
+                background-color: $itemColor;
                 bottom: -7px;
             }
         }
