--- a/src/header/Header.module.scss
+++ b/src/header/Header.module.scss
@@ -1,7 +1,7 @@
 .Header{
     display: flex;
     height: 80px;
-    background-color: #64fffd;
     justify-content: flex-end;
+    margin-right: 24px;
     align-items: center;
 }
