--- a/src/projects/project/Project.module.scss
+++ b/src/projects/project/Project.module.scss
@@ -2,7 +2,7 @@
 @import '/src/common/styles/sass/mixins';
 
 .project{
-    width: 450px;
+    max-width: 450px;
     background-color: $projectsColor;
     display: flex;
     flex-direction: column;
@@ -11,10 +11,15 @@
     border: 2px solid $itemColor;
     align-items: flex-start;
     justify-content: center;
+    @media screen and (max-width: 1231px) {
+        margin-bottom: 20px;
+    }
+
     .backgroundImage{
         width: 100%;
         height: 350px;
         display: flex;
+        z-index: 0;
         align-items: center;
         flex-direction: column;
         justify-content: center;
@@ -28,9 +33,10 @@
             bottom: 0;
             left: 0;
             right: 0;
-            background-color: black;
-            opacity: 0.3;
             border-radius: 6px 6px 0 0;
+        }
+        &:hover{
+            opacity: 0.9;
         }
         &:hover .button{
         display: inline-block;
@@ -42,6 +48,7 @@
             background-color: $itemColor;
             position: relative;
             padding: 0.8em 2.1em;
+            z-index: 2;
             margin-bottom: 0.75em;
             outline: 0;
             border: 2px solid $textDescriptionColor;
@@ -49,6 +56,7 @@
             border-radius: 30px;
             transition: all 0.3s ease-in-out;
             &:hover{
+                transition: all 0.4s ease-in-out;
                 background-color: $textDescriptionColor;
                 color: $itemColor;
             }
