--- a/src/App.scss
+++ b/src/App.scss
@@ -2,10 +2,27 @@
 
 
 .App {
+  display: flex;
+  flex-direction: column;
   background-color: $projectsColor;
-  max-width: 1320px;
-  @media screen and (min-width: 990px) {
-      margin: 45px;
-      border-radius: 40px;
+  margin-top: 100px;
+  @media only screen and (min-width: 1421px) {
+    max-width: 1320px;
+    border-radius: 40px;
+  }
+  @media only screen and (max-width: 1420px) and (min-width: 991px){
+    max-width: 94%;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 40px;
+  }
+  @media screen and (min-width: 991px) {
+    border-radius: 0;
+    margin: 0;
+    max-width: 100%;
+    min-width: 100%;
+    min-height: 100%;
+    width: 100%;
+    padding: 52px 40px 60px;
   }
 }
